// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.ColGroup allowTags 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkGrammar 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkGrammar 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkGrammar 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkGrammar 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkHighlight 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkHighlight 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkHighlight 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkHighlight 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkSpaces 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkSpaces 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkSpaces 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup checkSpaces 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup className 1`] = `
<colgroup
  className="uu5-bricks-table-col-group my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 1`] = `
<colgroup
  className="color-schema-default uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 2`] = `
<colgroup
  className="color-schema-red uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 3`] = `
<colgroup
  className="color-schema-red uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 4`] = `
<colgroup
  className="color-schema-red-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 5`] = `
<colgroup
  className="color-schema-red-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 6`] = `
<colgroup
  className="color-schema-green uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 7`] = `
<colgroup
  className="color-schema-green uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 8`] = `
<colgroup
  className="color-schema-green-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 9`] = `
<colgroup
  className="color-schema-green-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 10`] = `
<colgroup
  className="color-schema-yellow uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 11`] = `
<colgroup
  className="color-schema-yellow uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 12`] = `
<colgroup
  className="color-schema-yellow-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 13`] = `
<colgroup
  className="color-schema-yellow-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 14`] = `
<colgroup
  className="color-schema-purple uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 15`] = `
<colgroup
  className="color-schema-purple uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 16`] = `
<colgroup
  className="color-schema-purple-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 17`] = `
<colgroup
  className="color-schema-purple-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 18`] = `
<colgroup
  className="color-schema-brown uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 19`] = `
<colgroup
  className="color-schema-brown uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 20`] = `
<colgroup
  className="color-schema-brown-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 21`] = `
<colgroup
  className="color-schema-brown-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 22`] = `
<colgroup
  className="color-schema-orange uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 23`] = `
<colgroup
  className="color-schema-orange uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 24`] = `
<colgroup
  className="color-schema-orange-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 25`] = `
<colgroup
  className="color-schema-orange-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 26`] = `
<colgroup
  className="color-schema-cyan uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 27`] = `
<colgroup
  className="color-schema-cyan uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 28`] = `
<colgroup
  className="color-schema-cyan-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 29`] = `
<colgroup
  className="color-schema-cyan-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 30`] = `
<colgroup
  className="color-schema-grey uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 31`] = `
<colgroup
  className="color-schema-grey uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 32`] = `
<colgroup
  className="color-schema-grey-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 33`] = `
<colgroup
  className="color-schema-grey-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 34`] = `
<colgroup
  className="color-schema-pink uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 35`] = `
<colgroup
  className="color-schema-pink uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 36`] = `
<colgroup
  className="color-schema-pink-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 37`] = `
<colgroup
  className="color-schema-pink-rich uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup colorSchema 38`] = `
<colgroup
  className="color-schema-pink uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup content 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup content 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup content 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup content 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup controlled 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup controlled 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup controlled 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup controlled 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup default props 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup disabled 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup disabled 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup disabled 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup disabled 4`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup docKit examples props-allowTags 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID1"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Table"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-header"
    ignoreInnerHTML={false}
    key="uuID1-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-col-group
      allowTags={
        Array [
          "UU5.Example.MyColumnComponent",
        ]
      }
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuIDGroup"
      ignoreInnerHTML={false}
      key="uuIDGroup"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <MyColumnComponent
        className={null}
        id="myIDs"
        mainAttrs={null}
        name={null}
        noIndex={false}
        ref_={null}
        style={null}
        tooltip={null}
      />
      <TableCol
        className={null}
        colorSchema="red"
        controlled={true}
        disabled={false}
        hidden={false}
        id="uuIDlast"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        span={2}
        style={null}
        tooltip={null}
      />
    </table-col-group>
    <table-thead
      allowTags={Array []}
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID2"
      ignoreInnerHTML={false}
      key="uuID2"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID3"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Name"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID4"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rank"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID5"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Promotion prospects"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID5"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-thead>
  </table>
  <Footer
    className={null}
    content="Table footer"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID1-footer"
    ignoreInnerHTML={false}
    key="uuID1-footer"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
  />
</div>
`;

exports[`UU5.Bricks.Table.ColGroup dynamic 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup dynamic 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup dynamic 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup dynamic 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup hidden 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup hidden 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup hidden 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup hidden 4`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup id 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup ignoreHTML 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup ignoreHTML 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup ignoreHTML 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup ignoreHTML 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup mainAttrs 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup name 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 5`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 6`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 7`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 8`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 9`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 10`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 11`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 12`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 13`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 14`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 15`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 16`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 17`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 18`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 19`] = `""`;

exports[`UU5.Bricks.Table.ColGroup nestingLevel 20`] = `""`;

exports[`UU5.Bricks.Table.ColGroup noIndex 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup noIndex 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup noIndex 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup noIndex 4`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup props-allowTags 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID01"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Table"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID01-header"
    ignoreInnerHTML={false}
    key="uuID01-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-col-group
      allowTags={Array []}
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID02"
      ignoreInnerHTML={false}
      key="uuID02"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <TableCol
        className={null}
        colorSchema={null}
        controlled={true}
        disabled={false}
        hidden={false}
        id="uuID03"
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        span={null}
        style={null}
        tooltip={null}
      />
      <MyColumnComponent
        className={null}
        id="allowID"
        mainAttrs={null}
        name={null}
        noIndex={false}
        ref_={null}
        style={null}
        tooltip={null}
      />
    </table-col-group>
    <table-thead
      allowTags={Array []}
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuID04"
      ignoreInnerHTML={false}
      key="uuID04"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuID05"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Name"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID06"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rank"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID07"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Promotion prospects"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuID08"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-thead>
  </table>
</div>
`;

exports[`UU5.Bricks.Table.ColGroup pureRender 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup pureRender 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup pureRender 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup pureRender 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup selected 1`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup selected 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup selected 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup selected 4`] = `
<colgroup
  className="uu5-bricks-table-col-group uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup style 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup style 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup style 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup style 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup textCorrector 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup textCorrector 2`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup textCorrector 3`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup textCorrector 4`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.ColGroup tooltip 1`] = `
<colgroup
  className="uu5-bricks-table-col-group"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
